2004-06-27  Alexander Gottwald  <ago@freedesktop.org>

	* winconfig.c: Add entry for us layout. This changes not much but 
	removes a strange error message about the unknown us layout. 

2004-06-24  Alexander Gottwald  <ago@freedesktop.org>

	* InitOutput.c: Check for textmode mounted /tmp and print a warning

2004-06-15  Harold Hunt  <huntharo@msu.edu>

	* windialogs.c: Fix path to locally installed changelog for the About 
	dialog box.

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* winpriv.c: Create win32 window if not already created
	* winmultiwindowwindow.c: Export winCreateWindowWindow

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* win.h: Allow CYGDEBUG to defined in the Makefile
	* winwindow.h: Allow CYGWINDOWING_DEBUG to defined in the Makefile

2004-05-19  Alexander Gottwald  <ago@freedesktop.org>
	
	* winmultiwindowicons.c (winInitGlobalIcons): Load the small default
	icon too
	* winprefs.h, winprefs.c (winOverrideDefaultIcon): Takes the iconsize
	as parameter

2004-05-19  Alexander Gottwald  <ago@freedesktop.org>

	* win.h, winmultiwindowicons.c (winXIconToHICON): Takes iconsize
	as parameter 
	* winglobals.c, winmultiwindowicons.c: Rename g_hiconX to g_hIconX.
	Added new variable g_hSmallIconX for 16x16 icon.
	* winwindow.h, winmultiwindowicons.c (winInitGlobalIcons): Inits the 
	global g_hIconX handles.
	* winwindow.h, winmultiwindowicons.c (winDestroyIcon): Free the icon
	without messing with the global icon handle. 
	* winmultiwindowicons.c (winSelectIcons): Generate a custom icon from
	window settigns or set them to globals.
	* winmultiwindowshape.c, winmultiwindowwindow.c, winwin32rootless.c,
	  winwin32rootlesswindow.c, winwin32rootlesswndproc.c: Remove 
	declaration of g_hiconX;
	* winmultiwindowwindow.c (winCreateWindowsWindow),
	  winwin32rootless.c (winMWExtWMCreateFrame): Use winSelectIcons 
	to get the window icons. Set the small icon too.
	* winmultiwindowwindow.c (winDestroyWindowsWindow),